# PyCG

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
micro-benchmark/: args_test.py  assignments_test.py  base.py  builtins_test.py  classes_test.py  create_pytests.py  decorators_test.py  dicts_test.py  direct_calls_test.py  dynamic_test.py  exceptions_test.py  external_test.py  functions_test.py  generators_test.py  imports_test.py  kwargs_test.py  lambdas_test.py  lists_test.py  mro_test.py  returns_test.py
micro-benchmark-key-errs/: base.py
micro-benchmark-key-errs/snippets/classes/assigned_str/: main.py
micro-benchmark-key-errs/snippets/classes/base_class_const/: main.py
micro-benchmark-key-errs/snippets/classes/return_str/: main.py
micro-benchmark-key-errs/snippets/classes/self_assignment/: main.py
micro-benchmark-key-errs/snippets/classes/self_const/: main.py
micro-benchmark-key-errs/snippets/classes/self_dict/: main.py
micro-benchmark-key-errs/snippets/dicts/mutable_param/: main.py
micro-benchmark-key-errs/snippets/dicts/nested/: main.py
micro-benchmark-key-errs/snippets/dicts/return/: main.py
micro-benchmark-key-errs/snippets/dicts/return_direct/: main.py
pycg/: __init__.py  pycg.py
pycg/formats/: fasten.py
pycg/machinery/: definitions.py  imports.py  key_err.py  scopes.py
pycg/processing/: base.py  cgprocessor.py  keyerrprocessor.py  postprocessor.py  preprocessor.py
pycg/tests/: definitions_test.py  fasten_format_test.py  imports_test.py  pointers_test.py  scopes_test.py
(+10 files in other folders)
