[tool.poetry]
name = "pycg"
version = "0.1.0"
description = ""
authors = ["aarnav <aarnavbos@gmail.com>"]


packages = [{ include = "pycg"}]

[tool.poetry.scripts]
pycg = "pycg:main"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
